[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib",
    "pandas",
    "scikit-learn",
    "seaborn",
]

[dependency-groups]
mac = [
    "torch",
    "torchvision",
]
gpu = [
    { name = "torch", index = "pytorch-cu121" },
    { name = "torchvision", index = "pytorch-cu121" },
]

[tool.uv.sources]
pytorch-cu121 = { index-url = "https://download.pytorch.org/whl/cu121" }

