[project]
name = "src"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",

    # torch declared once
    "torch",
    "torchvision",
]

[tool.uv.sources]
# macOS CPU-only wheels from PyPI
torch = [
    { index = "pypi", marker = "sys_platform == 'darwin'" },

    # Linux GPU → CUDA 12.1 wheels
    { index = "pytorch-cu121", marker = "sys_platform != 'darwin'" }
]

# Index definitions
[[tool.uv.index]]
name = "pytorch-cu121"
url  = "https://download.pytorch.org/whl/cu121"
